updated to Spring 3 updated dependencies to latest (address vulnerabilities) replaced deprecated methods updated version to 1.1.0-GCP-SNAPSHOT